# clios

./: .buildinfo  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  CNAME  LICENSE  README.md  genindex.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-test.txt  search.html  searchindex.js  test.txt  tox.ini
.doctrees/: environment.pickle  index.doctree
.github/workflows/: build-docs.yml  publish.yml  test.yml
clios/: _Clios.py  __init__.py  application.py  ast_builder.py  cli.py  cli_docs.py  exceptions.py  notes.md  parser.py  registry.py  tokenizer.py
clios/cli/: __init__.py  app.py  arg_parser.py  ast_builder.py  cli_parser.py  cli_presenter.py  main_parser.py  operator_parser.py  param_parser.py  presenter.py  tokenizer.py
clios/core/: arg_parser.py  exceptions.py  main_parser.py  operator.py  operator_fn.py  operator_parser.py  param_info.py  param_parser.py  parameter.py  registry.py  tokenizer.py  utils.py
clios/operation/: _Operation.py
clios/operator/: __init__.py  model.py  operator.py  operator_fn.py  param_parser.py  parameter.py  params.py  utils.py
clios/registry/: _Registry.py  __init__.py
clios/tokenizer/: tokens.py
docs/: index.md
docs/extensions/: example2termynal.py  example_shell_block.py  termynal.py
docs/source/: conf.py  index.rst
examples/calc/: calc.py  parameters.py  test_calc.py
examples/calculator/: calculator.py  parameters.py  test_calculator.py
examples/numbers/: numbers.py  parameters.py  test_numbers.py
scripts/: lint.sh  test.sh  test_all_py.sh
src/clios/: __init__.py  exceptions.py  parser.py
src/clios/operation/: __init__.py
src/clios/operator/: _Operator.py  _Reader.py  _Writer.py  _utils.py
src/clios/tokenizer/: __init__.py  tokens.py
tests/: conftest.py  inline_valid.py  test_Registry.py  test_clio.py  test_clios.py  test_execute.py  test_operation.py  test_operator_execute.py  test_parse_tokens.py  test_tokenizer.py
tests/ast_builder/: conftest.py  test_first_argument_not_operator.py  test_operator_not_found.py  test_parse_tokens.py
tests/cli/: inline_multiple.py  inline_valid.py  test_CliOprParser.py  test_app.py  test_main_parser.py  test_param_parser.py  test_presenter.py  test_tokenizer.py
tests/core/: test_OperatorFn.py  test_OperatorFn_validate.py  test_OperatorFns.py  test_Operator_compose_arg_values.py  test_Parameter.py  test_Parameter_init_build_phase_validator.py  test_Parameter_init_execute_phase_validator.py  test_ReturnType_post_init.py  test_get_typed_signature.py  test_main_parser.py  test_registry.py
tests/core/testdata/: operator_invalid_fns.py  operator_valid_fns.py  utils.py
tests/operator/: test_BaseOperator.py  test_BaseOperator_load_params.py  test_Generator_call.py  test_OperatorFn.py  test_Operator_call.py  test_Operator_compose_arg_values.py  test_Operator_post_init.py  test_Parameter.py  test_Parameter_init_build_phase_validator.py  test_Parameter_init_execute_phase_validator.py  test_Reader.py  test_ReturnType_post_init.py  test_Writer.py  test_get_operator_fn.py  test_get_typed_signature.py  test_operator_factory.py  test_parameter_post_init.py  test_parameter_validate.py  test_reader_factory.py  test_utils.py  test_writer_factory.py
tests/operator/temp/: test_Generator_call.py  test_operator_factory.py  test_writer_factory.py
tests/parser/: conftest.py
tests/tokenizer/: test_parser.py  test_tokens.py
(+16 files in other folders)
