[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "clios"
dynamic = ["version"]
description = "Create chainable command line operators"
authors = [{ name = "Prajeesh Ag", email = "prajeeshag@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
homepage = "https://prajeeshag.github.io/clios"
repository = "https://github.com/prajeeshag/clios"
documentation = "https://prajeeshag.github.io/clios"

[tool.setuptools.packages.find]
where = ["."]
include = ["clios"]

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"
