[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "clios"
dynamic = ["version"]
description = "Create chainable command line operators"
authors = [{ name = "Prajeesh Ag", email = "prajeeshag@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic==2.9.*", "rich>=13.9.4"]

[project.urls]
homepage = "https://prajeeshag.github.io/clios"
repository = "https://github.com/prajeeshag/clios"
documentation = "https://prajeeshag.github.io/clios"

[tool.setuptools.packages.find]
where = ["."]
include = ["clios"]
exclude = ["tests", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"

[tool.commitizen]
name = "cz_gitmoji"

[dependency-groups]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.5.44", "termynal>=0.12.1"]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
]
