[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "clios"
dynamic = ["version"]
description = "Create chainable command line operators"
authors = [{ name = "Prajeesh Ag", email = "prajeeshag@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.1.*",
    "griffe==1.5.*",
    "pydantic==2.9.*",
    "rich>=13.9.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = "https://prajeeshag.github.io/clios"
repository = "https://github.com/prajeeshag/clios"
documentation = "https://prajeeshag.github.io/clios"

[project.scripts]
clios = "clios:main"

[tool.pdm.build]
excludes = ["tests", "examples"]


[tool.pdm.version]
source = "scm"

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]

[tool.commitizen]
name = "cz_gitmoji"

[dependency-groups]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.5.44", "termynal>=0.12.1"]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.8.0",
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.coverage.run]
source = ["clios"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
lint.extend-select = ["T201"]
